Table users {
  id integer [pk, increment]
  username varchar(30) [unique, not null]
  email varchar(254)
  password varchar(128) [not null]
  first_name varchar(30)
  last_name varchar(30)
  avatar varchar(100)
  currency_preference varchar(3) [default: 'USD']
  is_active boolean [default: true]
  is_verified boolean [default: true]
  is_staff boolean [default: false]
  is_superuser boolean [default: false]
  date_joined timestamp [not null, default: `now()`]
  last_login timestamp
}

Table categories {
  id integer [pk, increment]
  name varchar(100) [not null]
  description text
  icon varchar(50)
  color varchar(7) [default: '#000000']
  user_id integer [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table transactions {
  id integer [pk, increment]
  amount decimal(10,2) [not null]
  type varchar(10) [not null]
  category_id integer
  user_id integer [not null]
  date date [not null]
  description text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table budgets {
  id integer [pk, increment]
  name varchar(100) [not null]
  amount decimal(10,2) [not null]
  start_date date [not null]
  end_date date [not null]
  period varchar(10) [not null]
  user_id integer [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table budget_categories {
  id integer [pk, increment]
  budget_id integer [not null]
  category_id integer [not null]
  allocated_amount decimal(10,2) [not null]
}

Table authtoken_token {
  key varchar(40) [pk]
  created timestamp [not null, default: `now()`]
  user_id integer [unique, not null]
}

Ref: categories.user_id > users.id
Ref: transactions.user_id > users.id
Ref: transactions.category_id > categories.id
Ref: budgets.user_id > users.id
Ref: budget_categories.budget_id > budgets.id
Ref: budget_categories.category_id > categories.id
Ref: authtoken_token.user_id > users.id